--- a/test/skolstvi.html
+++ b/test/skolstvi.html
@@ -23,7 +23,7 @@ layout: default
 
 <div class="row" style="text-align: center">
   <div class="medium-12 large-12 columns">
-    <h1 class="o-section__heading l-program__heading">Naše řešení pro školství</h1>
+    <h1 class="o-section__heading l-program__heading">Naše řešení pro školství <img src="/assets/img/icons/a01_skolstvi.png" style="width: 120px;padding: 20px" /></h1>
     <h2 class="t-h4-alt">Návrhy Pirátů v souvislosti s <strong>řešením dopadů pandemie COVID-19</strong> pro <strong>školství</strong>:</h2>
   </div>
 </div>
