--- a/test/socialni-dopady.html
+++ b/test/socialni-dopady.html
@@ -22,9 +22,9 @@ layout: default
 </nav>
 
 <div class="row" style="text-align: center">
-  <div class="medium-12 large-12 columns">
+  <div class="medium-10 large-10 columns">
     
-    <h1 class="o-section__heading l-program__heading">Naše řešení pro socíální problematiku <img src="/assets/img/icons/a01_dluhy.png" style="width: 120px;padding: 20px" /></h1>
+    <h1 class="o-section__heading l-program__heading">Naše řešení pro sociální problematiku <img src="/assets/img/icons/a01_dluhy.png" style="width: 120px;padding: 20px" /></h1>
     <div class="l-program__lead">Návrhy Pirátů v souvislosti s <strong>řešením dopadů pandemie COVID-19</strong> pro <strong>socíální problematiku</strong>:</div>
   </div>
 </div>
