--- a/test/uvodni.html
+++ b/test/uvodni.html
@@ -410,6 +410,20 @@ margin-left: 1rem;"/>
 
 <hr/>
 
+<div class="row" style="text-align: center">
+  <div class="medium-12 large-12 columns">
+    <div class="row" style="text-align: center">
+      <div class="medium-12 large-12 columns">
+        <section class="o-section o-section--spaceBot">
+          <div class="o-section-inner o-section-inner--leftBlock">
+            <article class="l-prg__card">
+              <div class="row">
+                <div class="l-prg__content columns medium-10 text-left pull-right">
+                <h2 class="l-prg__card-title">Školství</h2>
+                                  </div>
+
+
+
                 <div class="l-prg__stats columns medium-2">
                   <div class="l-prg__stats-done">
                     <a href="skolstvi.html"><img src="/assets/img/icons/a01_skolstvi.png" style="padding: 20px" /></a>
