--- a/reseni/skoly/vysoke.html
+++ b/reseni/skoly/vysoke.html
@@ -30,68 +30,110 @@ layout: default
 
 <hr/>
 
-<div class="row">
-  <div class="medium-12 large-12 columns">
 
-<p>Vysoké školy</p>
-<p>Harmonogram uvolňování opatření</p>
+
+
+<div class="row" style="text-align: center">
+  <div class="medium-12 large-12 columns">
+    <div class="row" style="text-align: center">
+      <div class="medium-12 large-12 columns">
+        <section class="o-section o-section--spaceBot">
+          <div class="o-section-inner o-section-inner--leftBlock">
+            <article class="l-prg__card">
+              <div class="row">
+                <div class="l-prg__content columns medium-12 text-left pull-right">
+
+<h3>Vysoké školy</h3>
+<h4>Harmonogram uvolňování opatření</h4>
 <p>Osobní přítomnost studentů vysokých škol je v současnosti možná ve skupinách s maximálním počtem 15 studentů s výjimkou klinické a praktické výuky, kde tato omezení neplatí.</p>
 <p>Aktuálně je platné <a href="https://www.mzcr.cz/dokumenty/mimoradne-opatreni-omezeni-provozu-skol-a-skolskych-zarizeni-od-185do-25_19223_4135_1.html">mimořádné opatření</a> Ministerstva zdravotnictví ze dne 15. května 2020 s účinností od 18. května 2020.</p>
 <p>Vysoké školy se zároveň řídí zákonem <a href="https://www.zakonyprolidi.cz/cs/2020-188">č. 188/2020 Sb</a>., který rámcově upravuje pravidla studia nebo zkoušek v tomto roce. Na základě tohoto zákona si mohou vysoké školy samy nastavit podmínky tak, aby bylo možné i za současné situace dokončit letní semestr bez větších omezení.</p>
-<p>Rizikové oblasti</p>
+<h4>Rizikové oblasti</h4>
 <ul>
 <li>Chybí dostatečné zázemí a podmínky pro konání zkoušek v distanční formě. Vysoké školy proto preferují zkoušky v prezenční formě a v malých skupinách, což může být vzhledem k počtu studentů časově těžko zvládnutelné.</li>
 <li>Finanční ztráty kvůli krizi (omezení spolupráce se soukromým sektorem, studenti ze zahraničí).</li>
 <li>Neustálé změny v opatřeních vlády a chaotická komunikace ztěžují vysokým školám podmínky v nastavení vlastních opatření a zajištění výuky.</li>
 <li>Z důvodu pozdního vyhlášení termínů maturitní zkoušky dochází k překryvu s termíny přijímacích zkoušek na vysoké školy.</li>
 </ul>
-<p>Doporučení</p>
+<h4>Doporučení</h4>
 <ul>
 <li>Doplnit na webu ministerstva školství více informací. Informace mnohdy chybí, případně nejsou dostupné z důvodu nestability webu.</li>
 <li>Příprava konkrétních doporučení pro vysoké školy ve vazbě na vládní opatření (pomohlo by především menším vysokým školám v regionech).</li>
 <li>Zohlednit termíny maturitních zkoušek tak, aby se nepřekrývaly s termíny zkoušek na vysoké školy.</li>
 <li>Navrhujeme jednorázovou finanční pomoc vysokým školám pro podporu online výuky a rozvoj technického zázemí.    </li>
-</ul>
-
-
+</ul>  
+                </div>
+              </div>
+            </article>         
+          </div>
+        </section>
+      </div>
+    </div>
   </div>
 </div>
 
 <hr/>
 
-              <div class="row">
-                <div class="columns medium-6">
-                  <h3>Co prosazují Piráti:</h3>
+<div class="row" style="text-align: center">	
+  <div class="small-6 medium-2 columns">	
+    <div class="l-program__priority">	
+      <div class="l-program__priority-donut">	
+        <a href="skoly/materske.html"><img src="/assets/img/icons/a01_skolstvi.png" style="padding: 20px" /></a>      	
+      </div>	
+      <h3><a href="skoly/materske.html">Mateřské školy</a></h3>	
+    </div>    	
+  </div>  	
+  <div class="small-6 medium-2 columns">	
+    <div class="l-program__priority">	
+      <div class="l-program__priority-donut">	
+        <a href="skoly/zakladni.html"><img src="/assets/img/icons/a01_skolstvi.png" style="padding: 20px" /></a>      	
+      </div>	
+      <h3><a href="skoly/zakladni.html">Základní školy</a></h3>	
+    </div>    	
+  </div>	
+  <div class="small-6 medium-2 columns">   	
+    <div class="l-program__priority">	
+      <div class="l-program__priority-donut">	
+        <a href="skoly/stredni.html"><img src="/assets/img/icons/a01_skolstvi.png" style="padding: 20px" /></a>	
+      </div>	
+      <h3><a href="skoly/stredni.html">Střední školy a konzervatoře</a></h3>	
+    </div>	
+  </div>	
+  <div class="small-6 medium-2 columns">   	
+    <div class="l-program__priority">	
+      <div class="l-program__priority-donut">	
+        <a href="skoly/vyssi.html"><img src="/assets/img/icons/a01_skolstvi.png" style="padding: 20px" /></a>	
+      </div>	
+      <h3><a href="skoly/vyssi.html">Vyšší odborné školy</a></h3>	
+    </div>	
+  </div>	
+  <div class="small-6 medium-2 columns">   	
+    <div class="l-program__priority">	
+      <div class="l-program__priority-donut">	
+        <a href="skoly/vysoke.html"><img src="/assets/img/icons/a01_skolstvi.png" style="padding: 20px" /></a>	
+      </div>	
+      <h3><a href="skoly/vysoke.html">Vysoké školy</a></h3>	
+    </div>	
+  </div>	
+  <div class="small-6 medium-2 columns end">   	
+    <div class="l-program__priority">	
+      <div class="l-program__priority-donut">	
+        <a href="skoly/umelecke.html"><img src="/assets/img/icons/a01_skolstvi.png" style="padding: 20px" /></a>	
+      </div>	
+      <h3><a href="skoly/umelecke.html">Základní umělecké školy</a></h3>	
+    </div>	
+  </div>	
+</div>	
 
-                  <table>
-                    <tbody>                  
+<hr/>
 
-                    <tr><td>Zachování dvou termínů u přijímacích zkoušek na SŠ</td></tr>
-                    <tr><td>Zachování možnosti odvolání žáka proti rozhodnutí ředitele o žádosti o přijetí na SŠ</td></tr>
-                    <tr><td>Možnost delšího odkladu maturity a závěrečných zkoušek v učebních oborech, nikoliv jejich rychlé rušení</td></tr>
-                    <tr><td>Výukové skupiny pro znevýhodněné žáky</td></tr>
-                    <tr><td>Výpůjčka ICT do sociálně a ekonomicky znevýhodněných rodin</td></tr>
-                    <tr><td>Úprava podmínek a průběhu přijímacích zkoušek na VŠ v době krize</td></tr>
-                    <tr><td>Revize a úprava rozpočtu v oblasti školství</td></tr>
-                    <tr><td>Kontrola smysluplnosti škrtů ve financích na vědu a výzkum</td></tr>
-                    <tr><td>Elektronické zápisy do škol</td></tr>
-                    </tbody>
-                  </table>
-                </div>
-
-                <div class="columns medium-6">
-                <h3>Články k tématu:</h3>
-
-                  {% assign sorted-posts = site.posts | sort: 'date' | reverse | where: "tags","školství"  %}
-
-                  <ul>
-                  {% for post in sorted-posts %}
-                    <li>{{ post.date | date: "%d.%m.%Y" }} - <a class="c-headline-anchor" href="{{ post.url | relative_url }}" itemprop="url">{{ post.title }}</a></li>
-                  {% endfor %}
-                  </ul>
-                </div>
-              </div>
-
+<div class="row" style="text-align: center">
+  <div class="medium-12 large-12 columns">
+    <div class="row" style="text-align: center">
+      <div class="medium-12 large-12 columns">
+        <section class="o-section o-section--spaceBot">
+          <div class="o-section-inner o-section-inner--leftBlock">
+            <article class="l-prg__card">
               <div class="medium-12 pce-hero__cta">
                   <a class="pce-hero__cta-item button large" href="./">Zpět</a>
               </div>
