--- a/reseni/skolstvi2.html
+++ b/reseni/skolstvi2.html
@@ -78,7 +78,7 @@ layout: default
   <div class="small-6 medium-2 columns">	
     <div class="l-program__priority">	
       <div class="l-program__priority-donut">	
-        <a href="skoly/materske.html"><img src="/assets/img/icons/a01_skolstvi.png" style="padding: 20px" /></a>      	
+        <a href="skoly/materske.html"><img src="/assets/img/icons/materske.jpg" style="padding: 20px" /></a>      	
       </div>	
       <h3><a href="skoly/materske.html">Mateřské školy</a></h3>	
     </div>    	
@@ -86,7 +86,7 @@ layout: default
   <div class="small-6 medium-2 columns">	
     <div class="l-program__priority">	
       <div class="l-program__priority-donut">	
-        <a href="skoly/zakladni.html"><img src="/assets/img/icons/a01_skolstvi.png" style="padding: 20px" /></a>      	
+        <a href="skoly/zakladni.html"><img src="/assets/img/icons/zakladni.jpg" style="padding: 20px" /></a>      	
       </div>	
       <h3><a href="skoly/zakladni.html">Základní školy</a></h3>	
     </div>    	
@@ -94,7 +94,7 @@ layout: default
   <div class="small-6 medium-2 columns">   	
     <div class="l-program__priority">	
       <div class="l-program__priority-donut">	
-        <a href="skoly/stredni.html"><img src="/assets/img/icons/a01_skolstvi.png" style="padding: 20px" /></a>	
+        <a href="skoly/stredni.html"><img src="/assets/img/icons/stredni.jpg" style="padding: 20px" /></a>	
       </div>	
       <h3><a href="skoly/stredni.html">Střední školy a konzervatoře</a></h3>	
     </div>	
@@ -102,7 +102,7 @@ layout: default
   <div class="small-6 medium-2 columns">   	
     <div class="l-program__priority">	
       <div class="l-program__priority-donut">	
-        <a href="skoly/vyssi.html"><img src="/assets/img/icons/a01_skolstvi.png" style="padding: 20px" /></a>	
+        <a href="skoly/vyssi.html"><img src="/assets/img/icons/vyssi.jpg" style="padding: 20px" /></a>	
       </div>	
       <h3><a href="skoly/vyssi.html">Vyšší odborné školy</a></h3>	
     </div>	
@@ -110,7 +110,7 @@ layout: default
   <div class="small-6 medium-2 columns">   	
     <div class="l-program__priority">	
       <div class="l-program__priority-donut">	
-        <a href="skoly/vysoke.html"><img src="/assets/img/icons/a01_skolstvi.png" style="padding: 20px" /></a>	
+        <a href="skoly/vysoke.html"><img src="/assets/img/icons/vysoka.jpg" style="padding: 20px" /></a>	
       </div>	
       <h3><a href="skoly/vysoke.html">Vysoké školy</a></h3>	
     </div>	
@@ -118,7 +118,7 @@ layout: default
   <div class="small-6 medium-2 columns end">   	
     <div class="l-program__priority">	
       <div class="l-program__priority-donut">	
-        <a href="skoly/umelecke.html"><img src="/assets/img/icons/a01_skolstvi.png" style="padding: 20px" /></a>	
+        <a href="skoly/umelecke.html"><img src="/assets/img/icons/umelecka.jpg" style="padding: 20px" /></a>	
       </div>	
       <h3><a href="skoly/umelecke.html">Základní umělecké školy</a></h3>	
     </div>	
