--- a/reseni/skoly/materske.html
+++ b/reseni/skoly/materske.html
@@ -76,49 +76,49 @@ layout: default
   <div class="small-6 medium-2 columns">	
     <div class="l-program__priority">	
       <div class="l-program__priority-donut">	
-        <a href="materske.html"><img src="/assets/img/icons/a01_skolstvi.png" style="padding: 20px" /></a>      	
+        <a href="skoly/materske.html"><img src="/assets/img/icons/materske.jpg" style="padding: 20px" /></a>      	
       </div>	
-      <h3><a href="materske.html">Mateřské školy</a></h3>	
+      <h3><a href="skoly/materske.html">Mateřské školy</a></h3>	
     </div>    	
   </div>  	
   <div class="small-6 medium-2 columns">	
     <div class="l-program__priority">	
       <div class="l-program__priority-donut">	
-        <a href="zakladni.html"><img src="/assets/img/icons/a01_skolstvi.png" style="padding: 20px" /></a>      	
+        <a href="skoly/zakladni.html"><img src="/assets/img/icons/zakladni.jpg" style="padding: 20px" /></a>      	
       </div>	
-      <h3><a href="zakladni.html">Základní školy</a></h3>	
+      <h3><a href="skoly/zakladni.html">Základní školy</a></h3>	
     </div>    	
   </div>	
   <div class="small-6 medium-2 columns">   	
     <div class="l-program__priority">	
       <div class="l-program__priority-donut">	
-        <a href="stredni.html"><img src="/assets/img/icons/a01_skolstvi.png" style="padding: 20px" /></a>	
+        <a href="skoly/stredni.html"><img src="/assets/img/icons/stredni.jpg" style="padding: 20px" /></a>	
       </div>	
-      <h3><a href="stredni.html">Střední školy a konzervatoře</a></h3>	
+      <h3><a href="skoly/stredni.html">Střední školy a konzervatoře</a></h3>	
     </div>	
   </div>	
   <div class="small-6 medium-2 columns">   	
     <div class="l-program__priority">	
       <div class="l-program__priority-donut">	
-        <a href="vyssi.html"><img src="/assets/img/icons/a01_skolstvi.png" style="padding: 20px" /></a>	
+        <a href="skoly/vyssi.html"><img src="/assets/img/icons/vyssi.jpg" style="padding: 20px" /></a>	
       </div>	
-      <h3><a href="vyssi.html">Vyšší odborné školy</a></h3>	
+      <h3><a href="skoly/vyssi.html">Vyšší odborné školy</a></h3>	
     </div>	
   </div>	
   <div class="small-6 medium-2 columns">   	
     <div class="l-program__priority">	
       <div class="l-program__priority-donut">	
-        <a href="vysoke.html"><img src="/assets/img/icons/a01_skolstvi.png" style="padding: 20px" /></a>	
+        <a href="skoly/vysoke.html"><img src="/assets/img/icons/vysoka.jpg" style="padding: 20px" /></a>	
       </div>	
-      <h3><a href="vysoke.html">Vysoké školy</a></h3>	
+      <h3><a href="skoly/vysoke.html">Vysoké školy</a></h3>	
     </div>	
   </div>	
   <div class="small-6 medium-2 columns end">   	
     <div class="l-program__priority">	
       <div class="l-program__priority-donut">	
-        <a href="umelecke.html"><img src="/assets/img/icons/a01_skolstvi.png" style="padding: 20px" /></a>	
+        <a href="skoly/umelecke.html"><img src="/assets/img/icons/umelecka.jpg" style="padding: 20px" /></a>	
       </div>	
-      <h3><a href="umelecke.html">Základní umělecké školy</a></h3>	
+      <h3><a href="skoly/umelecke.html">Základní umělecké školy</a></h3>	
     </div>	
   </div>	
 </div>	
