--- a/reseni/skolstvi.html
+++ b/reseni/skolstvi.html
@@ -41,9 +41,9 @@ layout: default
                 <div class="l-prg__content columns medium-12 text-left pull-right">
             
 <h3>MŠMT zmatkuje, otevírání škol provází chaos a&nbsp;nejistota. Navrhujeme proto jasná pravidla.</h3>
-<br>                  
+<br>
 <h4>Aktuální shrnutí&nbsp;</h4>
-<p>Ministerstvo školství během prvního květnového víkendu rozeslalo hygienické a&nbsp;bezpečnostní pokyny pro&nbsp;školy v&nbsp;souvislosti s&nbsp;postupným návratem dětí do&nbsp;škol. Pokyny byly připraveny v&nbsp;úzké spolupráci s&nbsp;Ministerstvem zdravotnictví a&nbsp;jeho pracovní skupinou pro&nbsp;řízení uvolňování karanténních opatření. Pokyny pro&nbsp;školy jsou dostupné <b><a href="http://www.msmt.cz/soubor-hygienickych-pokynu-pro-ms-zs-a-ss">ZDE</a></b>.</p>
+<p>Ministerstvo školství během prvního květnového víkendu rozeslalo hygienické a&nbsp;bezpečnostní pokyny pro&nbsp;školy v&nbsp;souvislosti s&nbsp;postupným návratem dětí do&nbsp;škol. Pokyny byly připraveny v&nbsp;úzké spolupráci s&nbsp;Ministerstvem zdravotnictví a&nbsp;jeho pracovní skupinou pro&nbsp;řízení uvolňování karanténních opatření. Pokyny pro&nbsp;školy jsou dostupné <b><a href="http://www.msmt.cz/soubor-hygienickych-pokynu-pro-ms-zs-a-ss" class="c-emphasized-anchor u-stacked" style="text-decoration: underline;">ZDE</a></b>.</p>
                   
 <ul class="fa-ul icons icon-left">
   <li><span class="fa-li"><i class="fa fa-check" aria-hidden="true"></i></span>Pokyny poskytují dostatečný manévrovací prostor pro&nbsp;jednotlivé školy pro&nbsp;nastavení pravidel.</li>
