--- a/reseni/skoly/umelecke.html
+++ b/reseni/skoly/umelecke.html
@@ -45,7 +45,11 @@ layout: default
 
 <h4>Harmonogram uvolňování opatření</h4>
 <p>S obnovením osobní přítomnosti žáků základních uměleckých škol se počítá od 11. května 2020. Žáci budou rozděleni do školních skupin o velikosti maximálně 15 žáků.</p>
-<p>Aktuálně je platné <a href="https://www.mzcr.cz/dokumenty/mimoradne-opatreni-omezeni-provozu-skol-a-skolskych-zarizeni-od-185do-25_19223_4135_1.html">mimořádné opatření</a> Ministerstva zdravotnictví ze dne 15. května 2020 s účinností od 18. května 2020.</p>
+
+<p>
+  Aktuálně je platné <a href="https://www.mzcr.cz/dokumenty/mimoradne-opatreni-omezeni-provozu-skol-a-skolskych-zarizeni-od-185do-25_19223_4135_1.html" class="c-emphasized-anchor u-stacked" style="text-decoration: underline;">mimořádné opatření</a> Ministerstva zdravotnictví ze dne 19. května 2020 s účinností od 25. května 2020.
+</p>
+
 <h4>Rizikové oblasti</h4>
 <ul>
 <li>V pokynech nejsou jasně odlišena závazná pravidla od doporučení.</li>
