--- a/reseni/skoly/vyssi.html
+++ b/reseni/skoly/vyssi.html
@@ -44,7 +44,9 @@ layout: default
 
 <h4>Harmonogram uvolňování opatření</h4>
 <p>Výuka na vyšších odborných školách je umožněna od 11. května za účelem přípravy k závěrečným zkouškám (absolutorium). Příprava žáků ke zkouškám probíhá ve školních skupinách o velikosti maximálně 15 žáků (bez možnosti měnit složení skupin).</p>
-<p>Aktuálně je platné <a href="https://www.mzcr.cz/dokumenty/mimoradne-opatreni-omezeni-provozu-skol-a-skolskych-zarizeni-od-185do-25_19223_4135_1.html">mimořádné opatření</a> Ministerstva zdravotnictví ze dne 15. května 2020 s účinností od 18. května 2020.</p>
+<p>
+  Aktuálně je platné <a href="https://www.mzcr.cz/dokumenty/mimoradne-opatreni-omezeni-provozu-skol-a-skolskych-zarizeni-od-185do-25_19223_4135_1.html" class="c-emphasized-anchor u-stacked" style="text-decoration: underline;">mimořádné opatření</a> Ministerstva zdravotnictví ze dne 19. května 2020 s účinností od 25. května 2020.
+</p>
 <h4>Rizikové oblasti</h4>
 <ul>
 <li>Jasné odlišení závazných pravidel od doporučení a vymezení odpovědnosti školy i studentů nebo jejich rodičů.</li>
