--- a/reseni/skoly/stredni.html
+++ b/reseni/skoly/stredni.html
@@ -25,7 +25,7 @@ layout: default
   <div class="medium-12 large-12 columns">
     <h1 class="o-section__heading l-program__heading">Naše řešení pro střední školy a konzervatoře <img src="/assets/img/icons/stredni.jpg" style="width: 120px;padding: 20px" /></h1>
     <div class="l-program__lead">
-      Aktuální doporučení pro fungování střední školy a konzervatoře:
+      Aktuální doporučení pro fungování středních škol a konzervatoří:
     </div>
   </div>
 </div>
