--- a/reseni/skoly/umelecke.html
+++ b/reseni/skoly/umelecke.html
@@ -25,7 +25,7 @@ layout: default
   <div class="medium-12 large-12 columns">
     <h1 class="o-section__heading l-program__heading">Naše řešení pro umělecké školy <img src="/assets/img/icons/umelecka.jpg" style="width: 120px;padding: 20px" /></h1>
     <div class="l-program__lead">
-      Aktuální doporučení pro fungování základní umělecké školy:
+      Aktuální doporučení pro fungování základních uměleckých škol:
     </div>
   </div>
 </div>
