--- a/test/index.html
+++ b/test/index.html
@@ -32,15 +32,9 @@ keywords: úvod, piráti koronavirus, výroba roušek, video, dobrovolníci
 <div id="wowslider-container">
 <div class="ws_images">
     <ul>
-        <li><li><a href="#">a</a>
-            <!-- <img src="/assets/img/banners/osvc.png" alt="" width="100%" height="200" title="" id="wows_0"/><-->
-        </li>
-        <li><li><a href="#">b</a>
-            <!-- <img src="/assets/img/banners/osvc.png" alt="" width="100%" height="200" title="" id="wows_0"/>-->
-        </li>
-        <li><a href="#">c</a>
-            <!-- <img src="/assets/img/banners/osvc.png" alt="" width="100%" height="200" title="" id="wows_0"/>-->
-        </li>
+        <li><a href="#"><img src="/assets/img/banners/osvc.png" alt="" width="100%" height="200" title="" id="wows_0"/></a></li>
+        <li><a href="#"><img src="/assets/img/banners/osvc.png" alt="" width="100%" height="200" title="" id="wows_0"/></a></li>
+        <li><a href="#"><img src="/assets/img/banners/osvc.png" alt="" width="100%" height="200" title="" id="wows_0"/></a></li>
     </ul>
 </div>
 <div class="ws_bullets"><div>
