--- a/test/index2.html
+++ b/test/index2.html
@@ -58,16 +58,10 @@
   <!-- Swiper -->
   <div class="swiper-container">
     <div class="swiper-wrapper">
-      <div class="swiper-slide">Slide 1</div>
-      <div class="swiper-slide">Slide 2</div>
-      <div class="swiper-slide">Slide 3</div>
-      <div class="swiper-slide">Slide 4</div>
-      <div class="swiper-slide">Slide 5</div>
-      <div class="swiper-slide">Slide 6</div>
-      <div class="swiper-slide">Slide 7</div>
-      <div class="swiper-slide">Slide 8</div>
-      <div class="swiper-slide">Slide 9</div>
-      <div class="swiper-slide">Slide 10</div>
+      <div class="swiper-slide"><img src="/assets/img/banners/slider1.jpg" width="100%" /></div>
+      <div class="swiper-slide"><img src="/assets/img/banners/slider2.jpg" width="100%" /></div>
+      <div class="swiper-slide"><img src="/assets/img/banners/slider3.jpg" width="100%" /></div>
+      <div class="swiper-slide"><img src="/assets/img/banners/slider4.jpg" width="100%" /></div>
     </div>
     <!-- Add Arrows -->
     <div class="swiper-button-next"></div>
