--- a/index.html
+++ b/index.html
@@ -18,6 +18,25 @@ rbar:
    - video
 keywords: úvod, piráti koronavirus, výroba roušek, video, dobrovolníci
 ---
+<div class="row">
+  <div class="medium-12 large-8 columns">
+    <section class="o-section o-section--spaceBot">
+      <div class="o-section-inner o-section-inner--leftBlock">
+        <header class="o-section-header">
+          <h1 class="o-section__heading t-h1-super"><a href="https://budoucnostresimeted.cz/" target="_blank" rel="noopener">Budoucnost řešíme teď</a></h1>
+        </header>
+
+<p><b>Vítejte na stránkách, které slouží k rychlému dohledání zdrojů informací o všem, co souvisí s pandemií koronaviru.</b></p> 
+
+<p>Kontakty, zprávy, informace, výzvy k pomoci nebo naopak nabídky pomoci se na nás hrnou ze všech stran. Je těžké vybrat ty hlavní nebo ty opravdu užitečné. Je těžké usledovat vše, co se děje. A většinou člověk potřebuje informaci nebo kontakt rychle.</p>
+
+<p>Nabízíme <b><a href="https://koronavirus.pirati.cz/rozcestnik/" target="_blank" rel="noopener">rozcestník</a></b>, který vám hledání usnadní - najdete zde hlavní infolinky, důležité telefony na klíčové instituce, odkazy na krizové poradny, které nabízí pomoc a služby spojené s dopady nouzového stavu, odkazy na weby a facebookové stránky, které soustřeďují zájemce o pomoc nebo naopak nabídky pomoci.</p>
+
+<p>Podívejte se i na <b><a href="https://koronavirus.pirati.cz/reseni/" target="_blank" rel="noopener">návrhy Pirátů</a></b>, jak by věci měly nebo mohly fungovat během krize lépe než nyní!</p> 
+
+<p><a href="https://www.pirati.cz/vysledky/#type=koronavirus&datefilter6=all" target="_blank" rel="noopener"><strong>Přehled toho nejdůležitějšího, na čem Piráti pracují nejen v Poslanecké sněmovně</strong></a></p>
+
+
 
           <h2>Aktuálně</h2>
         {% for article in site.posts limit: 6 %}
