--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 ---
 layout: default
 #title: Rozcestník - koronavirus
+
+vzkazivanaavitka: 
+    title: Vzkaz Ivana a Vítka ke konci nouzového stavu
+    id: "OBkTh-MsPVg"
 casovaosa: 
     title: Pandemická časová osa
     id: "sVo9LBGpYZE"
@@ -46,6 +50,7 @@ keywords: úvod, piráti koronavirus, výroba roušek, video, dobrovolníci
           <a href="/en/"><img src="https://a.pirati.cz/resize/-x30/common/img/flags/gb.png" alt="gb"></a>
           </p>    
 
+          {% include right-bar/bar_video.html video=page.vzkazivanaavitka %}
           {% include right-bar/bar_video.html video=page.casovaosa %}
           {% include right-bar/bar_video.html video=page.rousky %}
           {% include right-bar/bar_video.html video=page.cisteni %}
